--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 networks:
   db:
@@ -8,16 +8,15 @@ networks:
 
 volumes:
   postgres:
-      driver: local
+    driver: local
 
 services:
-
   db:
     image: postgres:latest
     environment:
       POSTGRES_PASSWORD: root
       POSTGRES_USER: admin
-      POSTGRES_DB: flaskapp 
+      POSTGRES_DB: flaskapp
     volumes:
       - ./postgres:/var/lib/postgresql/data
     networks:
@@ -26,16 +25,16 @@ services:
   adminer:
     image: adminer:latest
     ports:
-      - 8080:8080 
+      - 8080:8080
     links:
       - db:db
     networks:
       - db
-  
+
   python:
     restart: always
     build:
-      context: . 
+      context: .
       dockerfile: ./python.dockerfile
     environment:
       FLASK_ENV: development
@@ -50,7 +49,7 @@ services:
 
   nginx:
     build:
-      context: . 
+      context: .
       dockerfile: ./nginx.dockerfile
     ports:
       - 80:80
@@ -59,3 +58,4 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./app:/var/www/app
+      - ./app-frontend/dist:/var/www/app/public
