--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,16 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen         80 default_server;
+    listen         [::]:80 default_server;
+    server_name    example.com;
+    root   /var/www/app/public;s
+    index  index.html;
+
 
     location / {
+         try_files $uri $uri/ =404;
+    }
+
+    location /api/ {
         include uwsgi_params;
         uwsgi_pass unix:/var/www/app/app.sock;
     }
