--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen         80 default_server;
     listen         [::]:80 default_server;
-    server_name    example.com;
-    root   /var/www/app/public;s
+    root   /var/www/app/public;
     index  index.html;
 
 
